--- a/index.html
+++ b/index.html
@@ -37,6 +37,17 @@
 		div.hr{
 			border-top: 1px solid #eeeeee;
 		}
+		.brand-logo{
+			font-size: 24px !important;
+		}
+		#step{
+			font-size: 20px;
+		}
+		h4{
+			margin-top: 2px;
+			margin-bottom: 30px;
+		}
+
 	</style>
 	<title>Step 5</title>
 </head>
@@ -44,7 +55,7 @@
 <body>
 	<nav class="light-blue darken-4" role="navigation">
 		<div class="nav-wrapper container">
-			<a id="logo-container" href="#" class="brand-logo">Workshop</a>
+			<a id="logo-container" href="#" class="brand-logo">Building Realtime Web Apps</a>
 		</div>
 	</nav>
 
@@ -52,8 +63,8 @@
 	<div class="section no-pad-bot" id="index-banner">
 		<div class="container">
 			<div class="row">
+				<div id="step" class="grey-text">Step 5</div>
 				<div class="collection-header"><h4>Who's online?</h4></div>
-				<br>
 				<ul class="collection">
 					<li class="collection-item">Number of users online
 						<span class="new badge light-blue accent-4" id="whos-online-count">0</span>
