design fixes - pending

--- a/index.html
+++ b/index.html
@@ -40,6 +40,16 @@
 		#whos-online-count{
 			margin-top: 35px;
 		}
+		.brand-logo{
+			font-size: 24px !important;
+		}
+		#step{
+			font-size: 20px;
+		}
+		h4{
+			margin-top: 2px;
+			margin-bottom: 30px;
+		}
 	</style>
 	<title>Step 6</title>
 </head>
@@ -47,7 +57,7 @@
 <body>
 	<nav class="light-blue darken-4" role="navigation">
 		<div class="nav-wrapper container">
-			<a id="logo-container" href="#" class="brand-logo">Workshop</a>
+			<a id="logo-container" href="#" class="brand-logo">Building Realtime Web Apps</a>
 		</div>
 	</nav>
 
@@ -57,6 +67,7 @@
 			<div class="row">
 				
 				<ul class="collection with-header"><span class="new badge light-blue accent-4" id="whos-online-count">0</span>
+					<li id="step" class="grey-text">Step 6</li>
 					<li class="collection-header"><h4>Who's online?</h4></li>
 					<span id="whos-online">
 						<li class="collection-item" id="chat-loading"><div>Loading..</div></li>
