--- a/index.html
+++ b/index.html
@@ -44,6 +44,16 @@
 		.character-counter{
 			float: left !important;
 		}
+		.brand-logo{
+			font-size: 24px !important;
+		}
+		#step{
+			font-size: 20px;
+		}
+		h4{
+			margin-top: 2px;
+			margin-bottom: 30px;
+		}
 	</style>
 	<title>Step 7</title>
 </head>
@@ -51,7 +61,7 @@
 <body>
 	<nav class="light-blue darken-4" role="navigation">
 		<div class="nav-wrapper container">
-			<a id="logo-container" href="#" class="brand-logo">Workshop</a>
+			<a id="logo-container" href="#" class="brand-logo">Building Realtime Web Apps</a>
 		</div>
 	</nav>
 
@@ -61,6 +71,7 @@
 			<div class="row">
 				<div class="col s12 m12 l8">
 					<ul class="collection with-header">
+						<li id="step" class="grey-text">Step 7</li>
 						<li class="collection-header"><h4>Chat room</h4></li>
 						<li class="collection-item">
 							<div id="chat-room">No messages yet</div>
