--- a/index.html
+++ b/index.html
@@ -58,7 +58,38 @@
 		.collection .collection-item{
 			background-color: transparent;
 		}
+		.chat-box{
+			height: 250px;
+			overflow-y: auto;
+			padding: 20px;
+		}
+		.chat-image-container{
+			position: absolute;
+		}
+		.chat-message-container{
+			width: 100%;
+			padding-left: 45px;
+			position: relative;
+			top: 16px;
+		}
+		.chat-sep{
+			margin-bottom: 15px;
+		}
+		.chat-box::-webkit-scrollbar {
+			width: 8px;
+		}
 
+		.chat-box::-webkit-scrollbar-track {
+			background-color: #ebebeb;
+			-webkit-border-radius: 10px;
+			border-radius: 10px;
+		}
+
+		.chat-box::-webkit-scrollbar-thumb {
+			-webkit-border-radius: 10px;
+			border-radius: 10px;
+			background: rgba(110, 110, 110, 0.6); 
+		}
 	</style>
 	<title>Step 8</title>
 </head>
@@ -80,16 +111,18 @@
 
 					<ul class="collection with-header">
 						<li class="collection-item">
-							<div class="input-field">
-								<input type="text" id="new-message" autocomplete="off" class="validate" maxlength="120" length="120">
-								<label for="new-message">Enter your message here</label>
-							</div>
-							<a id="submit-new-message" class="waves-effect waves-light btn right blue">Send<i class="mdi-content-send right"></i></a>
+							<form id="submit-new-message-form">
+								<div class="input-field">
+									<input type="text" id="new-message" autocomplete="off" class="validate" maxlength="120" length="120">
+									<label for="new-message">Enter your message here</label>
+								</div>
+								<a id="submit-new-message" class="waves-effect waves-light btn right blue">Send<i class="mdi-content-send right"></i></a>
+							</form>
 							<br>
 							<br>
 						</li>
 						<li class="collection-item">
-							<div id="chat-room"><div id="no-messages-yet">No messages yet</div></div>
+							<div id="chat-room" class="chat-box"><div id="no-messages-yet">No messages yet</div></div>
 						</li>
 					</ul>
 
