fixed number of steps

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
 		<div class="modal-content">
 			<h4>Interactive Tutorial</h4>
 			<p class="flow-text">
-				This tutorial contains <strong>7 steps</strong>. Each step being in a different <strong>branch</strong>.<br>
-				We are currently in step 0 on branch <strong>Master</strong>.<br>
+				This tutorial contains <strong>8 steps</strong>. Each step being in a different <strong>branch</strong>.<br>
+				We are currently on branch <strong>Master</strong>.<br>
 				Let's start the tutorial by switching to <strong>step1</strong> and then press Done
 				<blockquote class="flow-text">
 					git checkout -- .<br>
