changed switching steps

--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
 				We are currently on branch <strong>Master</strong>.<br>
 				Let's start the tutorial by switching to <strong>step1</strong> and then press Done
 				<blockquote class="flow-text">
-					git checkout -- .<br>
+					git add -A<br>
+					git commit -m "describe your changes"<br>
 					git checkout step1
 				</blockquote>
 			</p>
