--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	<div class="section no-pad-bot" id="index-banner">
 		<div class="container">
 			<h1 class="header center tutorial-title">Building real time web apps</h1>
-			<div class="flow-text center">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
+			<div class="flow-text center">Learn how to build a real-time chat client with a "who's online" feature</div>
 			<br>
 			<br>
 			<div class="row">
@@ -82,8 +82,7 @@
 				We are currently on branch <strong>Master</strong>.<br>
 				Let's start the tutorial by switching to <strong>step1</strong> and then press Done
 				<blockquote class="flow-text">
-					git add -A<br>
-					git commit -m "describe your changes"<br>
+					git checkout -- .<br>
 					git checkout step1
 				</blockquote>
 			</p>
