--- a/index.html
+++ b/index.html
@@ -42,9 +42,8 @@
 						<div class="collapsible-header active"><i class="mdi-action-account-circle"></i>Create an account on Pusher</div>
 						<div class="collapsible-body">
 							<p>
-								Open <a href="https://pusher.com/" target="_blank">pusher.com</a> and register using this Promo Code: XXXX-YYYY-ZZZZ<br>
-								This Promo Code exclusive to today's attendees will get you 120$ worth of credits for free.<br>
-								That's 6 months of the Startup plan.
+								Open <a href="https://pusher.com/" target="_blank">pusher.com</a> and create a free account.<br>
+								Optionally you can enter your Credit Card information and submit an exclusive promo code to get 120$ worth of credits for free. That's 6 months of the Startup plan. Promo code is available on the slides.<br>
 							</p>
 						</div>
 					</li>
@@ -107,7 +106,8 @@
 			<h4>Proceed to step 3</h4>
 			<p class="flow-text">
 				<blockquote class="flow-text">
-					git checkout -- .<br>
+					git add -A<br>
+					git commit -m "describe your changes"<br>
 					git checkout step3
 				</blockquote>
 			</p>
