--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 						<div class="collapsible-header"><i class="mdi-navigation-check"></i>Testing Client Side Integration</div>
 						<div class="collapsible-body">
 							<p>
-								Open the <strong>App Keys</strong> page and then go to <strong>server.php</strong> and trigger an the following using the Pusher constructor you just created:
+								Open your <strong>Pusher App Keys</strong> page and then go to <strong>server.php</strong> and trigger an the following using the Pusher constructor you just created:
 							</p>
 							<table class="bordered" width="100px" style="margin-left: 20px;">
 								<tr>
@@ -95,11 +95,11 @@
 								</tr>
 								<tr>
 									<th>Data</th>
-									<td>{"message": "Hello World"}</td>
+									<td>["message": "Hello World"]</td>
 								</tr>
 							</table>
 							<p>
-								Open your <strong>server.php</strong> page and expect an Alert from the App Keys page!
+								Navigate to <strong>server.php</strong> page in your brwoser and expect an Alert in the App Keys page!
 							</p>
 						</div>
 					</li>
@@ -119,7 +119,8 @@
 			<h4>Proceed to step 4</h4>
 			<p class="flow-text">
 				<blockquote class="flow-text">
-					git checkout -- .<br>
+					git add -A<br>
+					git commit -m "describe your changes"<br>
 					git checkout step4
 				</blockquote>
 			</p>
