done with step4

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 							<div class="collapsible-header"><i class="mdi-hardware-security"></i>Handle authentication</div>
 							<div class="collapsible-body">
 								<p>
-									Open <strong>auth.php</strong> and authenticate the request.<br>
-									For the sake of this tutorial, we will assume that the user is logged in and each attendee will return his own information as if he was logged in.
+									Open <strong>auth.php</strong> and check the source code.<br>
+									For the sake of this tutorial, we are assuming that the user is logged in and each attendee will return his own information as if he was logged in.
 								</p>
 							</div>
 						</li>
@@ -74,7 +74,7 @@
 							<div class="collapsible-body">
 								<p>
 									Open Chrome Developer Tools's <strong>Console</strong> then right click and enable <em>Log XMLHTTPRequests</em>.
-									Then <a href="#" onclick="window.location.reload();">Refresh</a> the page. and make sure that the authentication process succeeded.<br>
+									Then <a href="#" onclick="window.location.reload();">Refresh</a> the page and make sure that the authentication process succeeded.<br>
 								</p>
 							</div>
 						</li>
@@ -93,7 +93,8 @@
 				<h4>Proceed to step 5</h4>
 				<p class="flow-text">
 					<blockquote class="flow-text">
-						git checkout -- .<br>
+						git add -A<br>
+						git commit -m "describe your changes"<br>
 						git checkout step5
 					</blockquote>
 				</p>
