--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
 						<span class="new badge light-blue accent-4" id="whos-online-count">0</span>
 					</li>
 					<li class="collection-item grey lighten-5">
-						<div id="whos-online">No one yet</div>
+						<div id="no-one-online">No one yet</div>
+						<div id="whos-online"></div>
 					</li>
 				</ul>
 				<br>
@@ -116,7 +117,7 @@
 							<ul class="list">
 								<li>add_member(id, info)</li>
 								<li>remove_member(id, info)</li>
-								<li>update_members_count(count)</li>
+								<li>update_member_count(count)</li>
 							</ul>
 						</div>
 					</li>
@@ -142,7 +143,8 @@
 				<h4>Proceed to step 6</h4>
 				<p class="flow-text">
 					<blockquote class="flow-text">
-						git checkout -- .<br>
+						git add -A<br>
+						git commit -m "describe your changes"<br>
 						git checkout step6
 					</blockquote>
 				</p>
