Fixes for step7

--- a/index.html
+++ b/index.html
@@ -117,7 +117,8 @@
 				<h4>Proceed to step 8</h4>
 				<p class="flow-text">
 					<blockquote class="flow-text">
-						git checkout -- .<br>
+						git add -A<br>
+						git commit -m "describe your changes"<br>
 						git checkout step8
 					</blockquote>
 				</p>
