done from step8

--- a/index.html
+++ b/index.html
@@ -151,7 +151,8 @@
 				<h4>Proceed to step 9</h4>
 				<p class="flow-text">
 					<blockquote class="flow-text">
-						git checkout -- .<br>
+						git add -A<br>
+						git commit -m "describe your changes"<br>
 						git checkout step9
 					</blockquote>
 				</p>
