text enhancement in step4

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 					<li>
 						<div class="collapsible-header"><i class="mdi-file-file-download"></i>Client side Authentication endpoint</div>
 						<div class="collapsible-body">
-							<p>Using the docs, open your <strong>js/app.js</strong> and fix the existing code to use the authentication under <strong>auth.php</strong>.<br>
+							<p>After reading the docs, go back to your editor and open the <strong>js/app.js</strong> and fix the existing code to use the authentication under <strong>auth.php</strong>.<br>
 								Be careful with paths!</p>
 							</div>
 						</li>
