--- a/index.html
+++ b/index.html
@@ -75,18 +75,20 @@
 		<div class="container">
 			<div class="row">
 				<div class="col s12 m12 l8">
-					<div id="step" class="grey-text">Step 8</div>
+					<div id="step" class="grey-text">Step 7</div>
 					<div class="collection-header"><h4>Chat room</h4></div>
 
 					<ul class="collection with-header">
 						<li class="collection-item">
-							<div class="input-field">
-								<input type="text" id="new-message" autocomplete="off" class="validate" maxlength="120" length="120">
-								<label for="new-message">Enter your message here</label>
-							</div>
-							<a id="submit-new-message" class="waves-effect waves-light btn right blue">Send<i class="mdi-content-send right"></i></a>
-							<br>
-							<br>
+							<form id="submit-new-message-form">
+								<div class="input-field">
+									<input type="text" id="new-message" autocomplete="off" class="validate" maxlength="120" length="120">
+									<label for="new-message">Enter your message here</label>
+								</div>
+								<a id="submit-new-message" class="waves-effect waves-light btn right blue">Send<i class="mdi-content-send right"></i></a>
+								<br>
+								<br>
+							</form>
 						</li>
 						<li class="collection-item">
 							<div id="chat-room" class="chat-box"><div id="no-messages-yet">No messages yet</div></div>
@@ -107,6 +109,7 @@
 			<br>
 			<div class="center">
 				<a class="modal-trigger waves-effect waves-light btn-large light-blue accent-4 right" href="#modal-get-started">Next step</a>
+				<br>
 			</div>
 			<br>
 			<br>
