fixed step 8 code

--- a/index.html
+++ b/index.html
@@ -116,7 +116,9 @@
 									<input type="text" id="new-message" autocomplete="off" class="validate" maxlength="120" length="120">
 									<label for="new-message">Enter your message here</label>
 								</div>
-								<a id="submit-new-message" class="waves-effect waves-light btn right blue">Send<i class="mdi-content-send right"></i></a>
+								<button type="submit" id="submit-new-message" class="waves-effect waves-light btn right blue">
+									Send<i class="mdi-content-send right"></i>
+								</button>
 							</form>
 							<br>
 							<br>
