--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
 			padding: 20px;
 		}
 		.chat-image-container{
-			position: absolute;
+			width: 50px;
+			float: left;
 		}
 		.chat-message-container{
 			width: 100%;
