--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 						</div>
 					</li>
 					<li>
-						<div class="collapsible-header"><i class="mdi-navigation-check"></i>Testing Client Side Integration</div>
+						<div class="collapsible-header"><i class="mdi-navigation-check"></i>Testing Server Side Integration</div>
 						<div class="collapsible-body">
 							<p>
 								Open your <strong>Pusher App Keys</strong> page and then go to <strong>server.php</strong> and trigger an the following using the Pusher constructor you just created:
@@ -95,7 +95,7 @@
 								</tr>
 								<tr>
 									<th>Data</th>
-									<td>["message": "Hello World"]</td>
+									<td>["message" => "Hello World"]</td>
 								</tr>
 							</table>
 							<p>
